# check-check

./: README.md  pyproject.toml
configs/: apple_mlx_64gb_long.json  apple_mps_64gb_long.json  cuda_rocm_24gb_long.json  cuda_rocm_48gb_stress.json  cuda_rocm_6gb_long.json  smoke_test.json
src/pytorch_rgcn_benchmark.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/rgcn_benchmark/: benchmark_utils.py  compare.py  mlx_train.py  train.py
